--- a/udqAutoApp/www/app/customer/auto/autoMgr.html
+++ b/udqAutoApp/www/app/customer/auto/autoMgr.html
@@ -20,7 +20,7 @@
                 <h2>车牌号：{{auto.pn}}</h2>
                 <br />
                 <p>品牌:{{auto.brand}}&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 型号：{{auto.model}}</p>
-                <ion-option-button class="button-stable" ng-click="deleteAuto(auto)">
+                <ion-option-button class="button-assertive" ng-click="deleteAuto(auto)">
                     <i class="icon ion-ios-trash"></i>
             </ion-item>
         </ion-list>
