--- a/udqAutoApp/www/index.html
+++ b/udqAutoApp/www/index.html
@@ -12,7 +12,7 @@
     <link href="lib/ionic/css/ionic.min.css" rel="stylesheet" />
     <link href="css/ownMenu.css" rel="stylesheet" />
     <link href="css/star.css" rel="stylesheet" />
-    <link href="css/index.css" rel="stylesheet"/>
+    <link href="css/index.css" rel="stylesheet" />
 
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <!-- Cordova 引用，它在生成应用程序时添加到其中。 -->
@@ -60,6 +60,7 @@
     <script src="app/common/regionSvr.js"></script>
     <script src="app/util/cameraSvr.js"></script>
     <script src="app/util/fileTransferSvr.js"></script>
+    <script src="app/util/jpushSvr.js"></script>
 
 </head>
 <body ng-csp ng-app="udqApp">
