--- a/udqAutoApp/www/app/customer/order/orderList.html
+++ b/udqAutoApp/www/app/customer/order/orderList.html
@@ -27,9 +27,9 @@
                 <ion-option-button class="button-stable" ng-show='order.state==5' ng-click="shareOrder(order)">分享</ion-option-button>
             </ion-item>
         </ion-list>
-        <div>
+        <!--<div>
             <ion-infinite-scroll icon="ion-loading-c" on-infinite="updateOrders()" immediate-check="false" ng-if="noMoreOrderAvailable"></ion-infinite-scroll>
-        </div>
+        </div>-->
         
 
 
