--- a/udqAutoApp/www/app/customer/register/register.html
+++ b/udqAutoApp/www/app/customer/register/register.html
@@ -19,7 +19,7 @@
                     <input id="verifyInput" type="tel" placeholder="请输入手机验证码" ng-model="userInfo.psd">
                     
                 </label>
-                <button class=" button-small" ng-disabled="verifyDisabled" style="width:120px;text-align:center;" ng-click="getValidateCode()">
+                <button class="button button-small" ng-disabled="verifyDisabled" style="width:120px;text-align:center;" ng-click="getValidateCode()">
                     {{tips}}
                 </button>
                 
