--- a/udqAutoApp/www/index.html
+++ b/udqAutoApp/www/index.html
@@ -64,6 +64,6 @@
 
 </head>
 <body ng-csp ng-app="udqApp">
-    <ion-nav-view></ion-nav-view>
+    <ion-nav-view style="background-color:aqua;"></ion-nav-view>
 </body>
 </html>
