--- a/udqAutoApp/www/app/customer/home/home.html
+++ b/udqAutoApp/www/app/customer/home/home.html
@@ -1,25 +1,29 @@
-﻿
-<ion-view align-title="center" title="点趣车生活" >
+﻿<ion-view id="ss" align-title="center" title="点趣车生活" class="ion-view-costum">
     <div>
-        <ion-nav-bar class="bar-stable"></ion-nav-bar>
+        <ion-nav-bar class="ion-nav-bar-costume" align-title="center" style="font-size:x-large;font-weight:900;"></ion-nav-bar>
     </div>
 
     <ion-content padding="true" class="has-header">
         <!-- 图片轮播 -->
         <ion-slide-box>
             <ion-slide>
-                <div style="line-height:200px;border:1px solid rgb(238,238,238);border-radius:3px;text-align:center;width:100%;height:150px;background-color:rgb(255,255,255);">
+                <div style="line-height:100%;border:1px solid rgb(238,238,238);border-radius:3px;text-align:center;width:100%;height:180px;background-color:rgb(255,255,255);">
                     <a href="#">
-                        <img src="image/customerHome1.jpg" height="150" width="300"/>
-                        <!--<i class="icon ion-image" style="font-size:64px;color:rgb(136,136,136);vertical-align:middle;"></i>-->
+                        <img src="image/customerHome2.jpg" height="100%" width="100%" style="vertical-align:central;"/>
                     </a>
                 </div>
             </ion-slide>
             <ion-slide>
-                <div style="line-height:200px;border:1px solid rgb(238,238,238);border-radius:3px;text-align:center;width:100%;height:auto;background-color:rgb(255,255,255);">
+                <div style="line-height:100%;border:1px solid rgb(238,238,238);border-radius:3px;text-align:center;width:100%;height:180px;background-color:rgb(255,255,255);">
                     <a href="#">
-                        <img src="image/customerHome2.jpg" height="150" width="300"/>
-                        <!--<i class="icon ion-image" style="font-size:64px;color:rgb(136,136,136);vertical-align:middle;"></i>-->
+                        <img src="image/customerHome2.jpg" height="100%" width="100%" style="vertical-align:central;"/>
+                    </a>
+                </div>
+            </ion-slide>
+            <ion-slide>
+                <div style="line-height:100%;border:1px solid rgb(238,238,238);border-radius:3px;text-align:center;width:100%;height:180px;background-color:rgb(255,255,255);">
+                    <a href="#">
+                        <img src="image/customerHome2.jpg" height="100%" width="100%" style="vertical-align:central;" />
                     </a>
                 </div>
             </ion-slide>
