--- a/udqAutoApp/www/app/customer/member/memberCenter.html
+++ b/udqAutoApp/www/app/customer/member/memberCenter.html
@@ -1,30 +1,30 @@
-<ion-view title="我的点趣">
-    <ion-nav-bar class="bar-stable" align-title="center">
+<ion-view title="我的点趣" class="ion-view-costum">
+    <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-ios-arrow-back" ng-click="goBack()"></button>
+            <button class="button-clear icon ion-chevron-left" ng-click="goBack()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content>
         <!--列表-->
         <div class="list">
-            <ion-item class="item item-icon-left ">
-                <i class="icon ion-ios-person"></i>
-                {{user.name}}
-            </ion-item>
-            <ion-item class="item item-icon-left ">
-                <i class="icon ion-ios-telephone"></i>
-                {{user.mobile}}
-            </ion-item>
-            <ion-item class="item item-icon-left ">
-                <i class="icon ion-ios-body"></i>
-                <p ng-show="user.sex ==1">男</p>
-                <p ng-show="user.sex ==2">女</p>
-            </ion-item>
-            <a class="item item-icon-left " ng-click="goToEditOwnerInfo()">
-                <i class="icon ion-compose"></i>
-                修改信息
+            <label class="item item-input input-costume">
+                <span class="input-label"><h2>称呼</h2></span>
+                <input type="text" name="name" ng-model='user.name' placeholder="请输入您的称呼" class="input-costume" required>
+            </label>
+            <label class="item item-input input-costume">
+                <span class="input-label"><h2>电话号码</h2></span>
+                <input type="text" name="mobile" ng-model='user.mobile' placeholder="请输入您的称呼" class="input-costume" required>
+            </label>
+            <label class="item item-input input-costume">
+                <span class="input-label"><h2>性别</h2></span>
+                <input type="text" name="sex" ng-model="man" placeholder="请输入您的称呼" class="input-costume" ng-show="user.sex ==1">
+                <input type="text" name="sex" ng-model="woman" placeholder="请输入您的称呼" class="input-costume" ng-show="user.sex ==2">
+            </label>
+            <a class="item item-icon-right input-costume" ng-click="goToEditOwnerInfo()">
+                <h2>修改信息</h2>
+                <i class="icon ion-chevron-right"></i>
             </a>
-            <button class="button button-block button-positive " ng-click="exitCurrentUser()">退出账号</button>
+            <button class="button button-block" ng-click="exitCurrentUser()">退出账号</button>
         </div>
     </ion-content>
 
