--- a/udqAutoApp/www/app/customer/auto/autoList.html
+++ b/udqAutoApp/www/app/customer/auto/autoList.html
@@ -1,7 +1,7 @@
-<ion-view view-title="车辆列表">
-    <ion-nav-bar class="bar-stable" align-title="center">
+<ion-view view-title="车辆列表" class="ion-view-costum">
+    <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-ios-arrow-back" ng-click="goBackOfAuto()"></button>
+            <button class="button-clear icon ion-chevron-left" ng-click="goBackOfAuto()"></button>
         </ion-nav-buttons>
 
         <ion-nav-buttons side="right">
@@ -15,7 +15,9 @@
         <ion-refresher on-refresh="doRefresh()"></ion-refresher>
         
         <ion-list ng-repeat="auto in autoInfo" >
-            <ion-radio ng-model="selectedAuto.selectedAutoId" value={{auto.id}}>{{auto.pn}}</ion-radio>
+            <label class="input-costume">
+                <ion-radio ng-model="selectedAuto.selectedAutoId" value={{auto.id}}>{{auto.pn}}</ion-radio>
+            </label>
         </ion-list>
 
     </ion-content>
