--- a/udqAutoApp/www/app/customer/auto/citySelect.html
+++ b/udqAutoApp/www/app/customer/auto/citySelect.html
@@ -1,16 +1,16 @@
-﻿<ion-view view-title="选择城市">
-    <ion-nav-bar class="bar-stable" align-title="center">
+﻿<ion-view view-title="选择城市" class="ion-view-costum">
+    <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-arrow-left-c" ng-click="goBackOfCitySelect()"></button>
+            <button class="button-clear icon ion-chevron-left" ng-click="goBackOfCitySelect()"></button>
 
         </ion-nav-buttons>
 
     </ion-nav-bar>
-    <ion-content has-subheader="false">
+    <ion-content has-subheader="false" class="input-costume">
         <ion-refresher on-refresh="doRefreshOfCity()"></ion-refresher>
 
-        <ion-list ng-repeat="city in cities">
-            <ion-radio ng-model="autoInfo.selectedCityId" value={{city.id}}>{{city.name}}</ion-radio>
+        <ion-list class="input-costume" ng-repeat="city in cities" >
+            <ion-radio ng-model="autoInfo.selectedCityId" value={{city.id}} class="input-costume" >{{city.name}}</ion-radio>
         </ion-list>
 
     </ion-content>
