--- a/udqAutoApp/www/app/customer/auto/districtSelect.html
+++ b/udqAutoApp/www/app/customer/auto/districtSelect.html
@@ -1,7 +1,7 @@
-﻿<ion-view view-title="选择小区">
-    <ion-nav-bar class="bar-stable" align-title="center">
+﻿<ion-view view-title="选择小区" class="ion-view-costum">
+    <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-arrow-left-c" ng-click="goBackOfDistrictSelect()"></button>
+            <button class="button-clear icon ion-chevron-left" ng-click="goBackOfDistrictSelect()"></button>
 
         </ion-nav-buttons>
 
@@ -9,8 +9,8 @@
     <ion-content has-subheader="false">
         <ion-refresher on-refresh="doRefreshOfDistrict()"></ion-refresher>
 
-        <ion-list ng-repeat="district in districts" ng-show="district.pid ==autoInfo.selectedDistrictPid">
-            <ion-radio ng-model="autoInfo.selectedDistrictId" value={{district.id}}>{{district.name}}</ion-radio>
+        <ion-list class="input-costume" ng-repeat="district in districts" ng-show="district.pid ==autoInfo.selectedDistrictPid" >
+            <ion-radio ng-model="autoInfo.selectedDistrictId" value={{district.id}} class="input-costume">{{district.name}}</ion-radio>
         </ion-list>
 
     </ion-content>
