--- a/udqAutoApp/www/app/customer/member/memberInfoEdit.html
+++ b/udqAutoApp/www/app/customer/member/memberInfoEdit.html
@@ -1,8 +1,8 @@
 <!--编辑车主信息-->
-<ion-view title="编辑个人信息">
-    <ion-nav-bar>
+<ion-view title="编辑个人信息" class="ion-view-costum">
+    <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-ios-arrow-back" ng-click="goBack()"></button>
+            <button class="button-clear icon ion-chevron-left" ng-click="goBack()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
 
@@ -10,17 +10,17 @@
         <form>
             <ion-list>
                 <!--输入称呼和性别-->
-                <label class="item item-input">
-                    <i class="icon ion-ios-person placeholder-icon"></i>
+                <label class="item item-input input-costume">
+                    <span class="input-label"><h2>称呼</h2></span>
                     <input type="text" name="name" ng-model='user.name' placeholder="请输入您的称呼" required>
                 </label>
-                <ion-item>
-                    <input type="radio" name="sex" checked ng-model="user.sex" value='1' />男士&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                    <input type="radio" name="sex" ng-model="user.sex" value='2' />女士
+                <ion-item class="input-costume" style="color:white;">
+                    <input  type="radio" name="sex" checked ng-model="user.sex" value='1' />男士&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <input  type="radio" name="sex" ng-model="user.sex" value='2' />女士
                 </ion-item>
 
             </ion-list>
-            <button class="button button-block button-positive " ng-click="saveMemberInfo()">保存信息</button>
+            <button class="button button-block" ng-click="saveMemberInfo()">保存信息</button>
         </form>
     </ion-content>
 </ion-view>
