--- a/udqAutoApp/www/app/customer/order/orderList.html
+++ b/udqAutoApp/www/app/customer/order/orderList.html
@@ -1,15 +1,15 @@
-﻿<ion-view view-title="我的订单">
-    <ion-nav-bar class="bar-stable" align-title="center">
+﻿<ion-view view-title="我的订单" class="ion-view-costum">
+    <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-ios-arrow-back" ng-click="goBackOfMain()"></button>
+            <button class="button-clear icon ion-chevron-left" ng-click="goBackOfMain()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
 
     <ion-content>
         <ion-refresher on-refresh="doRefresh()"></ion-refresher>
         <div style="text-align:center;" ng-show="hasNoOrder"><h4>暂无订单</h4></div>
-        <ion-list class="list card" ng-repeat="order in orderList">
-            <ion-item>
+        <ion-list>
+            <ion-item  ng-repeat="order in orderList">
                 <div ng-click="goToSeeOrder(order)">
                     <h2>订单编号：{{order.orderNo}}</h2>
                     <p>车牌号：{{order.autoPN}} &nbsp&nbsp&nbsp金额：{{order.finalAmount}}</p>
@@ -27,11 +27,5 @@
                 <ion-option-button class="button-stable" ng-show='order.state==5' ng-click="shareOrder(order)">分享</ion-option-button>
             </ion-item>
         </ion-list>
-        <!--<div>
-            <ion-infinite-scroll icon="ion-loading-c" on-infinite="updateOrders()" immediate-check="false" ng-if="noMoreOrderAvailable"></ion-infinite-scroll>
-        </div>-->
-        
-
-
     </ion-content>
 </ion-view>
