--- a/udqAutoApp/www/app/customer/order/orderMake.html
+++ b/udqAutoApp/www/app/customer/order/orderMake.html
@@ -1,19 +1,19 @@
-<ion-view view-title="洗车预约">
-    <ion-nav-bar class="bar-stable" align-title="center">
+<ion-view view-title="洗车预约" class="ion-view-costum">
+    <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-ios-arrow-back" ng-click="goBackMain()"></button>
+            <button class="button-clear icon ion-chevron-left" ng-click="goBackMain()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content has-subheader="false">
 
         <!-- 选择洗车类型 -->
-        <div class="list">
-            <a class="item item-icon-right" ng-click="goToWashType()">
-                选择洗车类型
+        <div class="list ">
+            <a class="item item-icon-right input-costume" ng-click="goToWashType()">
+                <h2>选择洗车类型</h2>
                 <div class="item-content">
                     <ul ng-repeat="type in types" ng-show="type.check ==1">
                         <li>
-                            <h2>服务内容：{{type.name}}&nbsp;&nbsp;价格：{{type.amount}}元</h2>
+                            <h3>已选服务项：{{type.name}}&nbsp;&nbsp;价格：{{type.amount}}元</h3>
                         </li>
                     </ul>
                 </div>
@@ -22,41 +22,41 @@
 
             <!-- 车辆信息、预约时间、详细地址（可选） -->
 
-            <a class="item item-icon-right" ng-click="goToAutoList()">
-                选择车辆
+            <a class="item item-icon-right input-costume" ng-click="goToAutoList()">
+                <h2>选择车辆</h2>
                 <i class="icon ion-chevron-right"></i>
                 <div class="item-content">
                     <p ng-show="hasNoAuto">暂未添加车辆</p>
                     <ul ng-repeat="auto in autoInfo" ng-show="selectedAuto.selectedAutoId ==auto.id">
                         <li>
-                            选择车辆:{{auto.pn}}
+                            <h3>选择车辆:{{auto.pn}}</h3>
                         </li>
                     </ul>
                 </div>
             </a>
-            <a class="item item-icon-right" ng-click="goToRegionSelect()">
-                选择小区
+            <a class="item item-icon-right input-costume" ng-click="goToRegionSelect()">
+                <h2>选择小区</h2>
                 <i class="icon ion-chevron-right"></i>
 
                 <div class="item-content">
                     <ul ng-repeat="dis in districts" ng-show="dis.id ==selectedAuto.selectedRegionId">
                         <li>
-                            选择小区:{{dis.name}}
+                            <h3>选择小区:{{dis.name}}</h3>
                         </li>
                     </ul>
                 </div>
             </a>
             
-            <a class="item item-icon-right">
-            需要支付
-                <span class="badge badge-light">{{totalAmount}}&nbsp 元</span>
+            <a class="item item-icon-right input-costume">
+                <h2>需要支付</h2>
+                <span class="badge input-costume">{{totalAmount}}&nbsp 元</span>
                 
             </a>
-            <label class="item item-input">
-                <textarea placeholder="您还有什么要求呢？" ng-model="order.userNote"></textarea>
+            <label class="item item-input input-costume">
+                <textarea placeholder="您还有什么要求呢？" ng-model="order.userNote" class="input-costume"></textarea>
             </label>
 
-            <button class="button button-block button-positive " ng-click="commitOrder()">支付</button>
+            <button class="button button-block " ng-click="commitOrder()">支付</button>
 
         </div>
     </ion-content>
