--- a/udqAutoApp/www/app/customer/order/orderMgr.html
+++ b/udqAutoApp/www/app/customer/order/orderMgr.html
@@ -1,7 +1,7 @@
-﻿<ion-view view-title="{{selectOrder.orderNo}}">
-    <ion-nav-bar class="bar-stable" align-title="center">
+﻿<ion-view view-title="{{selectOrder.orderNo}}" class="ion-view-costum">
+    <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-ios-arrow-back" ng-click="goBackOfOrderList()"></button>
+            <button class="button-clear icon ion-chevron-left" ng-click="goBackOfOrderList()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content>
