--- a/udqAutoApp/www/app/customer/order/regionSelect.html
+++ b/udqAutoApp/www/app/customer/order/regionSelect.html
@@ -1,7 +1,7 @@
-﻿<ion-view view-title="选择小区">
-    <ion-nav-bar class="bar-stable" align-title="center">
+﻿<ion-view view-title="选择小区" class="ion-view-costum">
+    <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-ios-arrow-back" ng-click="goBackOfRegionSelect()"></button>
+            <button class="button-clear icon ion-chevron-left" ng-click="goBackOfRegionSelect()"></button>
 
         </ion-nav-buttons>
 
