--- a/udqAutoApp/www/app/customer/washType/washTypeIntroduce.html
+++ b/udqAutoApp/www/app/customer/washType/washTypeIntroduce.html
@@ -1,7 +1,7 @@
-﻿<ion-view view-title="服务介绍">
-    <ion-nav-bar class="bar-stable" align-title="center">
+﻿<ion-view view-title="服务介绍" class="ion-view-costum">
+    <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-ios-arrow-back" ng-click="goBack()"></button>
+            <button class="button-clear icon ion-chevron-left" ng-click="goBack()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content has-subheader="false">
