--- a/udqAutoApp/www/app/login/login.html
+++ b/udqAutoApp/www/app/login/login.html
@@ -1,8 +1,8 @@
 ﻿
-<ion-view align-title="center" title="点趣车生活">
-    <ion-nav-bar class="bar-stable" align-title="center">
+<ion-view align-title="center" title="点趣车生活" class="ion-view-costum">
+    <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-ios-arrow-back" ng-click="goBack()"></button>
+            <button class="button-clear icon ion-chevron-left" ng-click="goBack()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
 
@@ -10,16 +10,16 @@
         <!-- 图片轮播 -->
         <ion-slide-box >
             <ion-slide>
-                <div style="line-height:200px;border:1px solid rgb(238,238,238);border-radius:3px;text-align:center;width:100%;height:auto;background-color:rgb(255,255,255);">
+                <div style="line-height:100%;border:1px solid rgb(238,238,238);border-radius:3px;text-align:center;width:100%;height:auto;background-color:rgb(255,255,255);">
                      <a href="#">
-                         <i class="icon ion-image" style="font-size:64px;color:rgb(136,136,136);vertical-align:middle;"></i>
+                         <img src="image/customerHome2.jpg" height="100%" width="100%" style="vertical-align:central;" />
                      </a>
                  </div>
             </ion-slide>
             <ion-slide>
-                <div style="line-height:200px;border:1px solid rgb(238,238,238);border-radius:3px;text-align:center;width:100%;height:auto;background-color:rgb(255,255,255);">
+                <div style="line-height:100%;border:1px solid rgb(238,238,238);border-radius:3px;text-align:center;width:100%;height:auto;background-color:rgb(255,255,255);">
                      <a href="#">
-                         <i class="icon ion-image" style="font-size:64px;color:rgb(136,136,136);vertical-align:middle;"></i>
+                         <img src="image/customerHome2.jpg" height="100%" width="100%" style="vertical-align:central;" />
                      </a>
                  </div>
             </ion-slide>
@@ -28,22 +28,23 @@
         <form>
             <ion-list>
                 <div class="spacer"style="height:10px;"></div>
-                <label class="item item-input">
+                <label class="item item-input input-costume">
                     <i class="icon ion-ios-telephone-outline placeholder-icon"></i>
-                    <input type="tel" name="userName" placeholder="请输入手机号码" ng-model="user.mobile" required>
+                    <input type="tel" name="userName" placeholder="请输入手机号码" ng-model="user.mobile" class="input-costume" required>
                 </label>
 
-                <div class="item item-input-inset">
-                    <label class="item-input-wrapper">
-                        <input type="tel" placeholder="请输入手机验证码" ng-model="user.psd">
+                <div class="item item-input-inset input-costume">
+                    <label class="item-input-wrapper input-costume">
+                        <i class="icon ion-key placeholder-icon"></i>
+                        <input type="tel" placeholder="请输入手机验证码" ng-model="user.psd" class="input-costume">
                     </label>
-                    <button class="button button-small" ng-disabled="verifyDisabled" style="width:120px;text-align:center;" ng-click="getValidateCode()">
+                    <button class="button button-small input-costume" ng-disabled="verifyDisabled" style="width:120px;text-align:center;" ng-click="getValidateCode()">
                         {{tips}}
                     </button>
                 </div>
             </ion-list>
-            <button class="button button-stable button-block button-small" ng-click="login()">登录</button>
-            <button class="button button-stable button-block button-small" ng-click="register()">注册</button>
+            <button class="button input-costume button-block button-small" ng-click="login()">登录</button>
+            <button class="button input-costume button-block button-small" ng-click="register()">注册</button>
         </form>
     </ion-content>
 
