--- a/udqAutoApp/www/app/employee/order/photograph.html
+++ b/udqAutoApp/www/app/employee/order/photograph.html
@@ -23,16 +23,22 @@
         </div>
         <div class="row">
             <div class="col">
-                <button ng-click="takePhoto(1)" class="icon ion-plus-round"></button>
-                <button ng-click="delete(1)" class="icon ion-minus-round"></button>
+                <button ng-click="takePhoto(1)" class="button-clear ion-plus-round"></button>
             </div>
             <div class="col">
-                <button ng-click="takePhoto(2)" class="icon ion-plus-round"></button>
-                <button ng-click="delete(2)" class="icon ion-minus-round"></button>
+                <button ng-click="delete(1)" class="button-clear ion-minus-round"></button>
             </div>
             <div class="col">
-                <button ng-click="takePhoto(3)" class="icon ion-plus-round"></button>
-                <button ng-click="delete(3)" class="icon ion-minus-round"></button>
+                <button ng-click="takePhoto(2)" class="button-clear ion-plus-round"></button>
+            </div>
+            <div class="col">
+                <button ng-click="delete(2)" class="button-clear ion-minus-round"></button>
+            </div>
+            <div class="col">
+                <button ng-click="takePhoto(3)" class="button-clear ion-plus-round"></button>
+            </div>
+            <div class="col">
+                <button ng-click="delete(3)" class="button-clear ion-minus-round"></button>
             </div>
         </div>
         <div>
