--- a/udqAutoApp/www/app/employee/order/orderList.html
+++ b/udqAutoApp/www/app/employee/order/orderList.html
@@ -1,7 +1,11 @@
 ﻿<ion-view view-title="洗车店">
     <!-- header -->
     <div>
-        <ion-nav-bar class="bar-stable"></ion-nav-bar>
+        <ion-nav-bar class="bar-stable">
+            <ion-nav-buttons side="right">
+                <button class="button-clear icon ion-close-circled" ng-click="exitCurrentUser()"></button>
+            </ion-nav-buttons>
+        </ion-nav-bar>
     </div>
     <!--订单展示-->
     <ion-tabs class="tabs-top">
