--- a/udqAutoApp/www/app/customer/order/orderList.html
+++ b/udqAutoApp/www/app/customer/order/orderList.html
@@ -9,22 +9,22 @@
         <ion-refresher on-refresh="doRefresh()"></ion-refresher>
         <div style="text-align:center;" ng-show="hasNoOrder"><h4>暂无订单</h4></div>
         <ion-list>
-            <ion-item  ng-repeat="order in orderList">
+            <ion-item  ng-repeat="order in orderList" class="input-costume">
                 <div ng-click="goToSeeOrder(order)">
                     <h2>订单编号：{{order.orderNo}}</h2>
                     <p>车牌号：{{order.autoPN}} &nbsp&nbsp&nbsp金额：{{order.finalAmount}}</p>
-                    <span class="badge badge-stable" ng-show="order.state==0">未支付</span>
-                    <span class="badge badge-stable" ng-show="order.state==1">已下单</span>
-                    <span class="badge badge-stable" ng-show="order.state==10">车主取消</span>
-                    <span class="badge badge-stable" ng-show="order.state==11">门店取消</span>
-                    <span class="badge badge-stable" ng-show="order.state==2||order.state==3">洗车中</span>
-                    <span class="badge badge-stable" ng-show="order.state==4||order.state==5">已完成</span>
+                    <span class="badge input-costume" ng-show="order.state==0">未支付</span>
+                    <span class="badge input-costume" ng-show="order.state==1">已下单</span>
+                    <span class="badge input-costume" ng-show="order.state==10">车主取消</span>
+                    <span class="badge input-costume" ng-show="order.state==11">门店取消</span>
+                    <span class="badge input-costume" ng-show="order.state==2||order.state==3">洗车中</span>
+                    <span class="badge input-costume" ng-show="order.state==4||order.state==5">已完成</span>
                 </div>
-                <ion-option-button class="button-stable" ng-show="order.state==0" ng-click="payOrder(order)">支付</ion-option-button>
-                <ion-option-button class="button-stable" ng-show="order.state==1" ng-click="cancelOrder(order)">取消</ion-option-button>
-                <ion-option-button class="button-stable" ng-show="order.state==2||order.state==3||order.state==10||order.state==11" ng-click="scanOrder(order)">查看</ion-option-button>
-                <ion-option-button class="button-stable" ng-show='order.state==4' ng-click="judgeOrder(order)">评价</ion-option-button>
-                <ion-option-button class="button-stable" ng-show='order.state==5' ng-click="shareOrder(order)">分享</ion-option-button>
+                <ion-option-button class="input-costume" ng-show="order.state==0" ng-click="payOrder(order)">支付</ion-option-button>
+                <ion-option-button class="input-costume" ng-show="order.state==1" ng-click="cancelOrder(order)">取消</ion-option-button>
+                <ion-option-button class="input-costume" ng-show="order.state==2||order.state==3||order.state==10||order.state==11" ng-click="scanOrder(order)">查看</ion-option-button>
+                <ion-option-button class="input-costume" ng-show='order.state==4' ng-click="judgeOrder(order)">评价</ion-option-button>
+                <ion-option-button class="input-costume" ng-show='order.state==5' ng-click="shareOrder(order)">分享</ion-option-button>
             </ion-item>
         </ion-list>
     </ion-content>
