--- a/udqAutoApp/www/app/customer/order/orderPay.html
+++ b/udqAutoApp/www/app/customer/order/orderPay.html
@@ -7,8 +7,8 @@
 
     <ion-content>
         <ion-list>
-            <ion-radio ng-model="order.channel" value="alipay">支付宝</ion-radio>
-            <ion-radio ng-model="order.channel" value="wx">微信支付</ion-radio>
+            <ion-radio ng-model="order.channel" value="alipay"><h2>支付宝</h2></ion-radio>
+            <ion-radio ng-model="order.channel" value="wx"><h2>微信支付</h2></ion-radio>
         </ion-list>
         <div class="spacer" style="height:20px;"></div>
         <button class="button button-stable button-block" ng-click="commitOrder()">提交订单</button>
