--- a/udqAutoApp/www/app/customer/washType/washtypeSelect.html
+++ b/udqAutoApp/www/app/customer/washType/washtypeSelect.html
@@ -5,22 +5,17 @@
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content has-subheader="false">
-
-        <ul class="list" ng-repeat="type in types">
-
-            <li class="item item-checkbox">
-                <label class="checkbox">
-                    <input type="checkbox" ng-checked="type.check==1" ng-true-value="1" ng-false-value="2" ng-model="type.check"/>
-                </label>
-                <div class="item-content">
-                    <h2>{{type.name}}</h2><br />
-                    <p>服务内容：{{type.note}}</p><br />
-                    <p>价格：￥{{type.amount}}</p><br />
-
-                </div>
-
-            </li>
-
-        </ul>
+        <ion-list class="input-costume">
+            <ion-checkbox ng-model="types[0].check" ng-true-value="1" ng-false-value="1" class="input-costume" disabled>
+                <h2>{{types[0].name}}</h2><br />
+                <p>服务内容：{{types[0].note}}</p><br />
+                <p>价格：￥{{types[0].amount}}</p><br />
+            </ion-checkbox>
+            <ion-checkbox ng-model="type.check" ng-repeat="type in types" ng-true-value="1" ng-false-value="2" class="input-costume" ng-hide="type ==types[0]">
+                <h2>{{type.name}}</h2><br />
+                <p>服务内容：{{type.note}}</p><br />
+                <p>价格：￥{{type.amount}}</p><br />
+            </ion-checkbox>
+        </ion-list>
     </ion-content>
 </ion-view>
