--- a/udqAutoApp/www/app/customer/member/memberCenter.html
+++ b/udqAutoApp/www/app/customer/member/memberCenter.html
@@ -24,7 +24,7 @@
                 <h2>修改信息</h2>
                 <i class="icon ion-chevron-right"></i>
             </a>
-            <button class="button button-block" ng-click="exitCurrentUser()">退出账号</button>
+            <button class="button button-balanced button-block" ng-click="exitCurrentUser()">退出账号</button>
         </div>
     </ion-content>
 
