--- a/udqAutoApp/www/app/login/login.html
+++ b/udqAutoApp/www/app/login/login.html
@@ -38,13 +38,13 @@
                         <i class="icon ion-key placeholder-icon"></i>
                         <input type="tel" placeholder="请输入手机验证码" ng-model="user.psd" class="input-costume">
                     </label>
-                    <button class="button button-small input-costume" ng-disabled="verifyDisabled" style="width:120px;text-align:center;" ng-click="getValidateCode()">
+                    <button class="button button-energized button-small input-costume" ng-disabled="verifyDisabled" style="width:120px;text-align:center;" ng-click="getValidateCode()">
                         {{tips}}
                     </button>
                 </div>
             </ion-list>
-            <button class="button input-costume button-block button-small" ng-click="login()">登录</button>
-            <button class="button input-costume button-block button-small" ng-click="register()">注册</button>
+            <button class="button button-balanced button-block button-small" ng-click="login()">登录</button>
+            <button class="button button-calm button-block button-small" ng-click="register()">注册</button>
         </form>
     </ion-content>
 
