--- a/udqAutoApp/www/app/customer/auto/autoList.html
+++ b/udqAutoApp/www/app/customer/auto/autoList.html
@@ -15,7 +15,7 @@
         <ion-refresher on-refresh="doRefresh()"></ion-refresher>
         
         <ion-list >
-                <ion-radio class="input-costume" ng-model="selectedAuto.selectedAutoId" value={{auto.id}} ng-repeat="auto in autoInfo">{{auto.pn}}</ion-radio>
+                <ion-radio class="input-costume" ng-model="selectedAuto.selectedAutoId" value={{auto.id}} ng-repeat="auto in autoInfo"><h2>{{auto.pn}}</h2></ion-radio>
         </ion-list>
 
     </ion-content>
