--- a/udqAutoApp/www/app/customer/auto/autoMgr.html
+++ b/udqAutoApp/www/app/customer/auto/autoMgr.html
@@ -19,7 +19,7 @@
             <ion-item ng-repeat="auto in autoInfo" ng-class="'input-costume'">
                 <h2>车牌号：{{auto.pn}}</h2>
                 <h3>品牌:{{auto.brand}}&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 型号：{{auto.model}}</h3>
-                <ion-option-button ng-click="deleteAuto(auto)" ><span class="input-label"><h2>删除</h2></span></ion-option-button>
+                <ion-option-button class="button-assertive" ng-click="deleteAuto(auto)" ><span class="input-label"><h2>删除</h2></span></ion-option-button>
             </ion-item>
         </ion-list>
 
