--- a/udqAutoApp/www/app/customer/home/home.html
+++ b/udqAutoApp/www/app/customer/home/home.html
@@ -32,14 +32,14 @@
         <div class="spacer" style="height:25px;"></div>
         <!-- 两排按钮 -->
         <div class="row">
-            <div class="col"><a class="button button-circle" ng-click="goToBookWash()">洗车</a></div>
-            <div class="col"><a class="button button-circle" ng-click="goToMyOrder()">订单</a></div>
-            <div class="col"><a class="button button-circle" ng-click="goToAutoList()">车辆</a></div>
+            <div class="col"><a class="ownbutton ownbutton-circle" ng-click="goToBookWash()">洗车</a></div>
+            <div class="col"><a class="ownbutton ownbutton-circle" ng-click="goToMyOrder()">订单</a></div>
+            <div class="col"><a class="ownbutton ownbutton-circle" ng-click="goToAutoList()">车辆</a></div>
         </div>
         <div class="row">
-            <div class="col"><a class="button button-circle">优惠券</a></div>
-            <div class="col"><a class="button button-circle" ng-click="goToWashTypeIntroduce()">服务</a></div>
-            <div class="col"><a class="button button-circle" ng-click="goToMyDQ()">我的</a></div>
+            <div class="col"><a class="ownbutton ownbutton-circle">优惠券</a></div>
+            <div class="col"><a class="ownbutton ownbutton-circle" ng-click="goToWashTypeIntroduce()">服务</a></div>
+            <div class="col"><a class="ownbutton ownbutton-circle" ng-click="goToMyDQ()">我的</a></div>
         </div>
  
     </ion-content>
