--- a/udqAutoApp/www/app/customer/order/orderMake.html
+++ b/udqAutoApp/www/app/customer/order/orderMake.html
@@ -56,7 +56,7 @@
                 <textarea placeholder="您还有什么要求呢？" ng-model="order.userNote" class="input-costume"></textarea>
             </label>
 
-            <button class="button button-block " ng-click="commitOrder()">支付</button>
+            <button class="button button-balanced button-block " ng-click="commitOrder()">支付</button>
 
         </div>
     </ion-content>
