--- a/udqAutoApp/www/app/customer/order/orderMgr.html
+++ b/udqAutoApp/www/app/customer/order/orderMgr.html
@@ -5,14 +5,47 @@
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content>
-        <span class="badge badge-assertive">{{order.state}}</span>
-        <p>车牌号：{{selectOrder.autoPN}}</p>
-        <p>清洗工编号：{{selectOrder.washerId}}</p>
-        <p>预约时间：{{selectOrder.orderTime}}</p>
-        <p>结束时间：{{selectOrder.finishTime}}</p>
-        <p>金额：{{selectOrder.finalAmount}}</p>
-        <p>洗车备注：{{selectOrder.userNote}}</p>
-        <p>评分：{{selectOrder.gradeUser}}</p>
+        <ion-list>
+            <label class="item item-input input-costume">
+                <span class="input-label"><h2>状态</h2></span>
+                <p ng-show="selectOrder.state==0">未支付</p>
+                <p ng-show="selectOrder.state==1">已下单</p>
+                <p ng-show="selectOrder.state==10">车主取消</p>
+                <p ng-show="selectOrder.state==11">门店取消</p>
+                <p ng-show="selectOrder.state==2||selectOrder.state==3">洗车中</p>
+                <p ng-show="selectOrder.state==4||selectOrder.state==5">已完成</p>
+            </label>
+            <label class="item item-input input-costume">
+                <span class="input-label"><h2>车牌号</h2></span>
+                <p>{{selectOrder.autoPN}}</p>
+            </label>
+            <label class="item item-input input-costume">
+                <span class="input-label"><h2>清洗工编号</h2></span>
+                <p>{{selectOrder.washerId}}</p>
+            </label>
+
+            <label class="item item-input input-costume">
+                <span class="input-label"><h2>预约时间</h2></span>
+                <p>{{selectOrder.orderTime}}</p>
+            </label>
+            <label class="item item-input input-costume">
+                <span class="input-label"><h2>结束时间</h2></span>
+                <p>{{selectOrder.finishTime}}</p>
+            </label>
+            <label class="item item-input input-costume">
+                <span class="input-label"><h2>金额</h2></span>
+                <p>{{selectOrder.finalAmount}}元</p>
+            </label>
+            <label class="item item-input input-costume">
+                <span class="input-label"><h2>洗车备注</h2></span>
+                <p>{{selectOrder.userNote}}</p>
+            </label>
+            <label class="item item-input input-costume">
+                <span class="input-label"><h2>评分</h2></span>
+                <p>{{selectOrder.gradeUser}}</p>
+            </label>
+        </ion-list>
+        
         <div class="spacer" style="height:10px;"></div>
         <div ng-show="selectOrder.state==4">
             请为此次洗车评分：
@@ -36,9 +69,9 @@
                 <label title="1 stars" for="score-1">1 stars</label>
             </fieldset>
 
-            <button class="button-stable button-block" ng-show="selectOrder.state==4" ng-click="judge(selectOrder)">确认</button>
+            <button class="button-balanced button-block" ng-show="selectOrder.state==4" ng-click="judge(selectOrder)">确认</button>
         </div>
-                <button class="button-block buton-stable" ng-show="selectOrder.state==5">分享</button>
+                <button class="button-block buton-energized" ng-show="selectOrder.state==5">分享</button>
 
 
     </ion-content>
