--- a/udqAutoApp/www/app/customer/order/orderPay.html
+++ b/udqAutoApp/www/app/customer/order/orderPay.html
@@ -11,6 +11,6 @@
             <ion-radio ng-model="order.channel" value="wx"><h2>微信支付</h2></ion-radio>
         </ion-list>
         <div class="spacer" style="height:20px;"></div>
-        <button class="button button-stable button-block" ng-click="commitOrder()">提交订单</button>
+        <button class="button button-balanced button-block" ng-click="commitOrder()">提交订单</button>
     </ion-content>
 </ion-view>
