--- a/udqAutoApp/www/app/customer/register/register.html
+++ b/udqAutoApp/www/app/customer/register/register.html
@@ -19,7 +19,7 @@
                     <input id="verifyInput" type="tel" placeholder="请输入手机验证码" ng-model="userInfo.psd" class="input-costume">
                     
                 </label>
-                <button class="button button-small" ng-disabled="verifyDisabled" style="width:120px;text-align:center;" ng-click="getValidateCode()">
+                <button class="button button-energized button-small" ng-disabled="verifyDisabled" style="width:120px;text-align:center;" ng-click="getValidateCode()">
                     {{tips}}
                 </button>
                 
@@ -37,7 +37,7 @@
 
 
         </ion-list>
-        <button class="button button-stable button-block button-small" ng-click="register()">注册</button>
+        <button class="button button-balanced button-block button-small" ng-click="register()">注册</button>
 
     </ion-content>
 </ion-view>
