--- a/udqAutoApp/www/app/employee/order/photo.html
+++ b/udqAutoApp/www/app/employee/order/photo.html
@@ -1,12 +1,12 @@
 ﻿<ion-view>
-    <ion-nav-bar class="bar-stable" align-title="center">
+    <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="right">
             <button class="button-clear icon ion-close-circled" ng-click="goBack()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
         <ion-content>
             <div>
-                <img id="photo" src="" style="width:100%">
+                <img id="photo" src="" style="width:100%;height:auto">
             </div>
         </ion-content>
 </ion-view>
