--- a/udqAutoApp/www/app/employee/order/orderInfo.html
+++ b/udqAutoApp/www/app/employee/order/orderInfo.html
@@ -1,5 +1,5 @@
 ﻿<ion-view title="订单信息">
-    <ion-nav-bar class="bar-stable" align-title="center">
+    <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
             <button class="button-clear icon ion-arrow-left-c" ng-click="goBack()"></button>
         </ion-nav-buttons>
