--- a/udqAutoApp/www/app/employee/order/photograph.html
+++ b/udqAutoApp/www/app/employee/order/photograph.html
@@ -7,13 +7,13 @@
     </ion-nav-bar>
     <ion-content class="scroll-content has-header">
         <ion-refresher on-refresh="doRefresh()"></ion-refresher>
-        <div class="item item-input input-costume">
+        <div class="item item-input">
             客户姓名：{{order.customerName}}
         </div>
-        <div class="item item-input input-costume">
+        <div class="item item-input">
             联系电话：{{order.customerMobile}}
         </div>
-        <div class="item item-input input-costume">
+        <div class="item item-input">
             车牌号码：{{order.autoPN}}
         </div>
         <div class="row" style="margin:0px;padding:0px;">
